# kotaeba

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE.md  TODO.md  completed_tasks.md  config.py  download_default_model.py  main.py  pyproject.toml  validation.py
.github/workflows/: release-dmg.yml
KotaebaApp/: AGENTS.md  README.md
KotaebaApp/KotaebaApp/: Info.plist
KotaebaApp/KotaebaApp.xcodeproj/: project.pbxproj
KotaebaApp/KotaebaApp/App/: AppDelegate.swift  KotaebaApp.swift
KotaebaApp/KotaebaApp/Audio/: AudioCaptureManager.swift  AudioInputDevice.swift
KotaebaApp/KotaebaApp/Core/: AppStateManager.swift  Constants.swift  HuggingFaceModelLookup.swift  ModelCatalog.swift
KotaebaApp/KotaebaApp/Data/: Models.swift  StatisticsManager.swift
KotaebaApp/KotaebaApp/Hotkey/: HotkeyManager.swift  HotkeyProcessor.swift  HotkeyShortcut.swift  Permissions.swift
KotaebaApp/KotaebaAppTests/: AggregatedStatsTests.swift  AppStateManagerTests.swift  AppStateTests.swift  AudioInputDeviceSelectionTests.swift  ClientConfigEncodingTests.swift  HotkeyProcessorTests.swift  HotkeyShortcutTests.swift  ModelCatalogTests.swift  ModelDownloadStatusTests.swift  RecordingModeTests.swift  ServerMessageParsingTests.swift  SettingsMigrationTests.swift  ShellCommandRunnerTests.swift  StatisticsManagerTests.swift  TextInsertionErrorTests.swift  TextInsertionUtilsTests.swift
models/: __init__.py  errors.py  websocket.py
scripts/: install_local_app.sh  run_app.sh
scripts/release/: build_dmg.sh  publish_release.sh
stt/: __init__.py  run_mlx_server.py
(+33 files in other folders)
