[project]
name = "kotaeba"
version = "0.1.0"
description = "MLX Audio STT Server with streaming support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-audio>=0.2.10",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.0.0",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["models*", "stt*"]